Welcome Email with Inline images
Signed-off-by: enggaloksingh <aloksingh.itbhu@gmail.com>

--- a/Universal/templates/Universal/email/NOTIFICATIONBLUE.html
+++ b/Universal/templates/Universal/email/NOTIFICATIONBLUE.html
@@ -12,8 +12,8 @@
         <tr>
           <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td width="61"><a href= "http://yourlink" target="_blank"><img src="images/PROMO-GREEN2_01_01.jpg" width="61" height="76" border="0" alt=""/></a></td>
-                <td width="144"><a href= "http://yourlink" target="_blank"><img src="images/PROMO-GREEN2_01_02.jpg" width="144" height="76" border="0" alt=""/></a></td>
+                <td width="61"><a href= "http://yourlink" target="_blank"><img src="cid:PROMO-GREEN2_01_01.jpg" width="61" height="76" border="0" alt=""/></a></td>
+                <td width="144"><a href= "http://yourlink" target="_blank"><img src="cid:PROMO-GREEN2_01_02.jpg" width="144" height="76" border="0" alt=""/></a></td>
                 <td width="393"><table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
                       <td height="46" align="right" valign="middle"><table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -25,7 +25,7 @@
                         </table></td>
                     </tr>
                     <tr>
-                      <td height="30"><img src="images/PROMO-GREEN2_01_04.jpg" width="393" height="30" border="0" alt=""/></td>
+                      <td height="30"><img src="cid:PROMO-GREEN2_01_04.jpg" width="393" height="30" border="0" alt=""/></td>
                     </tr>
                   </table></td>
               </tr>
@@ -61,7 +61,7 @@ Team CarLane<br />
                 <td>&nbsp;</td>
                 <td align="right" valign="top"><table width="108" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td><img src="images/PROMO-GREEN2_04_01.jpg" width="108" height="9" style="display:block" border="0" alt=""/></td>
+                    <td><img src="cid:PROMO-GREEN2_04_01.jpg" width="108" height="9" style="display:block" border="0" alt=""/></td>
                   </tr>
                   <tr>
                     <td align="center" valign="middle" bgcolor="#03bcda"><font style="font-family: Georgia, 'Times New Roman', Times, serif; color:#ffffff; font-size:14px"><em><a href="http://www.google.com" target="_blank" style="color:#ffffff; text-decoration: underline">CarLane</a></em></font></td>
@@ -84,7 +84,7 @@ Team CarLane<br />
           <td>&nbsp;</td>
         </tr>
         <tr>
-          <td><img src="images/PROMO-GREEN2_07.jpg" width="598" height="7" style="display:block" border="0" alt=""/></td>
+          <td><img src="cid:PROMO-GREEN2_07.jpg" width="598" height="7" style="display:block" border="0" alt=""/></td>
         </tr>
         <tr>
           <td>&nbsp;</td>
